--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,22 @@
 cmake_minimum_required(VERSION 3.10)
 project(DataStructureVisualizer)
 
+# Set the C++ standard
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Include directories
-include_directories(${CMAKE_SOURCE_DIR}/include)
+# Find SDL2
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
 
-# Find necessary packages
-find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
-find_package(nlohmann_json REQUIRED)
+# Include the nlohmann/json header-only library
+find_path(NLOHMANN_JSON_INCLUDE_DIR nlohmann/json.hpp)
+include_directories(${NLOHMANN_JSON_INCLUDE_DIR})
 
-# Add executable
-add_executable(DataStructureVisualizer src/main.cpp src/DataVisualizer.cpp)
+# Add the executable
+add_executable(DSV src/main.cpp src/DataVisualizer.cpp)
 
 # Link libraries
-target_link_libraries(DataStructureVisualizer
-  sfml-graphics sfml-window sfml-system
-  nlohmann_json::nlohmann_json
-)
+target_link_libraries(DSV ${SDL2_LIBRARIES})
+
 
